GNOME Bugzilla – Bug 736117
Fixes a crash if the WM changes (or restarts)
Last modified: 2014-09-05 12:17:35 UTC
.
Created attachment 285472 [details] [review] keyboard: Make it possible to stop watching for WM changes As we don't want to be doing that anymore if we're not in the keyboard panel anymore.
Created attachment 285473 [details] [review] keyboard: Fixes a crash if the WM changes (or restarts) By stopping watching for WM changes when leaving the shortcuts panel. #0 reload_sections #1 wm_window_event_filter #2 gdk_event_apply_filters at gdkeventsource.c:81 #3 gdk_event_source_translate_event at gdkeventsource.c:195 #4 _gdk_x11_display_queue_events at gdkeventsource.c:338 #5 gdk_display_get_event at gdkdisplay.c:313 #10 g_main_context_iteration at gmain.c:3766 #11 g_application_run at gapplication.c:1623 See https://bugzilla.redhat.com/show_bug.cgi?id=1094480
Created attachment 285474 [details] [review] keyboard: Fix a crash if the WM changes (or restarts) By stopping watching for WM changes when leaving the shortcuts panel. #0 reload_sections #1 wm_window_event_filter #2 gdk_event_apply_filters at gdkeventsource.c:81 #3 gdk_event_source_translate_event at gdkeventsource.c:195 #4 _gdk_x11_display_queue_events at gdkeventsource.c:338 #5 gdk_display_get_event at gdkdisplay.c:313 #10 g_main_context_iteration at gmain.c:3766 #11 g_application_run at gapplication.c:1623 See https://bugzilla.redhat.com/show_bug.cgi?id=1094480
Created attachment 285475 [details] [review] keyboard: Fix a crash if the WM changes (or restarts) By stopping watching for WM changes when leaving the shortcuts panel. #0 reload_sections #1 wm_window_event_filter #2 gdk_event_apply_filters at gdkeventsource.c:81 #3 gdk_event_source_translate_event at gdkeventsource.c:195 #4 _gdk_x11_display_queue_events at gdkeventsource.c:338 #5 gdk_display_get_event at gdkdisplay.c:313 #10 g_main_context_iteration at gmain.c:3766 #11 g_application_run at gapplication.c:1623 See https://bugzilla.redhat.com/show_bug.cgi?id=1094480
Review of attachment 285472 [details] [review]: looks good
Review of attachment 285475 [details] [review]: yes
Attachment 285472 [details] pushed as 6c43ebe - keyboard: Make it possible to stop watching for WM changes Attachment 285475 [details] pushed as 439eb22 - keyboard: Fix a crash if the WM changes (or restarts)