panels/keyboard/wm-common.h
@@ -10,8 +10,9 @@ gchar *wm_common_get_current_window_manager (void);
  * using _GNOME_WM_KEYBINDINGS if available, _NET_WM_NAME otherwise. */
 char **wm_common_get_current_keybindings (void);
 
-void   wm_common_register_window_manager_change (GFunc    func,
-						 gpointer data);
+gpointer   wm_common_register_window_manager_change   (GFunc    func,
+						       gpointer data);
+void       wm_common_unregister_window_manager_change (gpointer id);
 
 #endif /* WM_COMMON_H */
 
